--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">buka-buku</string>
+    <string name="remove_book">Remove book</string>
+    <string name="back_button">Go Back</string>
+    <string name="checkout_button">Proceed to Checkout</string>
 </resources>
