--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">buka-buku</string>
+    <string name="book_name">PACHINKO</string>
+    <string name="book_genre">Cuento • Novela • Romance</string>
+    <string name="book_author">Min Jin Lee</string>
 </resources>
